# web_home_work_14

./: .gitignore  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/versions/: 070bdf0011d0_add_field_confirmed.py  bfbbffcde108_init.py
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16411  16412  16421  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  (+2 more)
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_main.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
